History
=======

Version 0.6.1 - unreleased
--------------------------

Version 0.6.0 - 2008-08-21
--------------------------

- Moved 'singing.scheduler.assemble_messages' and 'render_message'
  into their own IMessageAssemble adapter (on channel).  This allows
  for easier hooking into these policy-riddled functions to make them
  work differently for different types of channels.  Also, added a
  small flag that allows to ignore the subscriber's 'cue' completely.
  [nouri]

Version 0.5.0 - 2008-07-29
--------------------------

- Start depending on plone.z3cform>=0.3dev
  [nouri]

Version 0.4 - 2008-07-23
------------------------

- Added optional checking for channel attr 'subscribeable' to
  channel_lookup. Subscription validaton and the subscribe portlet use
  this feature.
  [tmog]

- Bringing versioning in line with
  http://peak.telecommunity.com/DevCenter/setuptools
  [stonor]

- Added full_schema used on the edit page for Filtered Collectors. Now
  we can re-edit these ;-)
  [tmog]

- Make call of MessageQueues.flush() more flexible to get a handy
  method to flush also new messages. this doesnt change any current
  behaviour.
  [jensens]

- Added Polish translation by Barbara Struk
  [naro]

Version 0.3
-----------

- Use zc.lockfile instead of the excessive use of transaction.commit()
  to lock the queue processing.
  [nouri]

- Use email.Header module for message header formatting
  Refactored mail.py to create messages MIMEMultipart based
  [naro]
  
- added Czech translation
  [naro]
  
Version 0.2
-----------

- Commit after pulling a message from the queue.
  [nouri]

- ITransform is now an adapter on the content being transformed
  instead of a utility.  This allows us to use the content's URL
  when rewriting links.
  [tmog]

- updated pot and danish translation
  [bartholdy]

- Add button to subscribe form to "Send my subscription details",
  for when subscribers forgot their secret.
  [nouri]
